Fix piano nav bar overlap on mobile

--- a/piano/style.css
+++ b/piano/style.css
@@ -9,7 +9,8 @@ html, body {
 }
 
 #app {
-  height: 100%;
+  height: calc(100% - 55px);
+  margin-top: 55px;
   display: flex;
   align-items: center;
   justify-content: center;
